--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>freshcart-groceries-galore</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>FreshCart</title>
+    <link rel="icon" href="/assets/icon2.png" type="image/png" />
+    <meta name="description" content="FreshCart" />
+    <meta name="author" content="FreshCart" />
 
-    <meta property="og:title" content="freshcart-groceries-galore" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="FreshCart" />
+    <meta property="og:description" content="FreshCart" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/assets/icon.png" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:card" content="FreshCart" />
+    <meta name="twitter:image" content="/assets/icon.png" />
   </head>
 
   <body>
